update content, fix ring on mobile

--- a/project/src/dependencies/css/tailwind.css
+++ b/project/src/dependencies/css/tailwind.css
@@ -60,7 +60,7 @@ form input, form textarea {
     @apply border-0 rounded-md shadow-sm;
     @apply px-4 py-2;
     @apply placeholder:text-gray-400;
-    @apply ring-1 ring-inset ring-gray-300;
+    @apply appearance-none ring-1 ring-inset ring-gray-300;
     @apply focus:ring-2 focus:ring-inset focus:ring-sky-400 duration-300 ease-in-out;
 
 }
